--- a/app/src/main/res/layout/event_note.xml
+++ b/app/src/main/res/layout/event_note.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/a"
+        android:id="@+id/warning_icon"
         android:layout_width="match_parent"
         android:layout_height="90dp"
         android:background="@color/mediumBlue"
@@ -18,7 +18,7 @@
         android:id="@+id/text_dialog_information"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/a"
+        android:layout_below="@+id/warning_icon"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="4dp"
         android:layout_marginTop="20dp"
