--- a/app/src/main/res/layout/toolbar_seekbar.xml
+++ b/app/src/main/res/layout/toolbar_seekbar.xml
@@ -1,76 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar_seekbar"
+    <data>
+        <variable
+            name="viewmodel"
+            type="com.app.craniowake.view.viewModel.WithStimulationViewModel" />
+    </data>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/color_gradient_blue_rectangle"
-        android:minHeight="?android:attr/actionBarSize"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar_seekbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:weightSum="1.1">
+            android:layout_height="wrap_content"
+            android:background="@drawable/color_gradient_blue_rectangle"
+            android:minHeight="?android:attr/actionBarSize"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-            <TextView
-                android:id="@+id/left"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:paddingStart="15dp"
-                android:paddingEnd="15dp"
-                android:text="@string/_0_m_a"
-                android:textColor="#FFFFFF" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:weightSum="1.1">
 
-            <SeekBar
-                android:id="@+id/slider_stimulation"
-                style="@android:style/Widget.DeviceDefault.Light.SeekBar"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:max="12"
-                android:paddingLeft="15dp"
-                android:paddingRight="15dp"
-                android:progress="0"
-                android:theme="@style/Theme.MaterialComponents.DayNight"
-                android:thumbTint="#FFFFFF" />
+                <TextView
+                    android:id="@+id/left"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:paddingStart="15dp"
+                    android:paddingEnd="15dp"
+                    android:text="@string/_0_m_a"
+                    android:textColor="#FFFFFF" />
 
-            <TextView
-                android:id="@+id/right"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:paddingStart="15dp"
-                android:paddingEnd="15dp"
-                android:text="@string/_6_m_a"
-                android:textColor="#FFFFFF" />
+                <SeekBar
+                    android:id="@+id/slider_stimulation"
+                    style="@android:style/Widget.DeviceDefault.Light.SeekBar"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:max="12"
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp"
+                    android:progress="@={viewmodel.stimulationInt}"
+                    android:theme="@style/Theme.MaterialComponents.DayNight"
+                    android:thumbTint="#FFFFFF" />
 
-            <TextView
-                android:id="@+id/current_value"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:paddingLeft="15dp"
-                android:paddingRight="15dp"
-                android:text="@string/_0"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:textColor="#FFFFFF" />
+                <TextView
+                    android:id="@+id/right"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:paddingStart="15dp"
+                    android:paddingEnd="15dp"
+                    android:text="@string/_6_m_a"
+                    android:textColor="#FFFFFF" />
 
-            <Button
-                android:id="@+id/stimulate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="stimulate"
-                />
-        </LinearLayout>
-    </androidx.appcompat.widget.Toolbar>
-</LinearLayout>
+                <TextView
+                    android:id="@+id/current_value"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp"
+                    android:text="@string/_0"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:textColor="#FFFFFF" />
+
+                <Button
+                    android:id="@+id/stimulate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:onClick="@{() -> viewmodel.stimulate()}"
+                    android:text="stimulate" />
+            </LinearLayout>
+        </androidx.appcompat.widget.Toolbar>
+    </LinearLayout>
+</layout>
