--- a/app/src/main/res/layout/event_treshhold_test_stimulation.xml
+++ b/app/src/main/res/layout/event_treshhold_test_stimulation.xml
@@ -71,7 +71,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
-                        android:text="epidural"
+                        android:text="@string/epidural"
                         android:textSize="26sp" />
 
                     <RadioButton
@@ -80,7 +80,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
-                        android:text="cortical"
+                        android:text="@string/cortical"
                         android:textSize="26sp" />
 
                     <RadioButton
@@ -88,7 +88,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="subcortical"
+                        android:text="@string/subcortical"
                         android:textSize="26sp" />
                 </RadioGroup>
 
